# psychic-potato

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  mise.toml
.cargo/: config.toml
examples/: SM_shotslog_Jan_07.csv  SM_shotslog_Jan_21.csv  SM_shotslog_Jan_28.csv
lib/shared-types/: Cargo.toml
lib/shared-types/src/: request.rs  response.rs
lib/shotmarker-csv-parser/: Cargo.toml
lib/shotmarker-csv-parser/example-files/: SM_shotslog_Jan_18.csv
lib/shotmarker-csv-parser/examples/: SM_shotslog_Jan_14.csv
lib/shotmarker-csv-parser/examples/svg-shot-strings/: Cargo.toml
lib/shotmarker-csv-parser/examples/svg-shot-strings/src/: main.rs
lib/shotmarker-csv-parser/src/: error.rs  lib.rs  parser.rs  string.rs  units.rs
lib/shotmarker-csv-parser/src/parser/: tests.rs  util.rs
lib/shotmarker-csv-parser/src/string/: shot.rs
server/: Cargo.toml
server/.sqlx/: query-082bc717f62b5111a11e35254ffdcdfd87331a5dbdee525ede98f8eac5b2cbb7.json  query-0ef1682005ed5c7fb715fd9e25a1cb048dd913ffe920ba7f594098adb2956513.json  query-26e4a8fed557141ca1b81ece9fa8b8357a60d29184e162105f6eb65f7ebc2c4c.json  query-3b42d6d6fe5980350ad3e28f46e8089b95cec248c611bea5842d47c62b97d982.json  query-3e888474eec697761e979b8e9b4bbe1a04ec0550edf383d29b7b4a4eb8e2f6ba.json  query-473171333ac2f29d55e7ed7c5e0efdfbafb4a7368c9ed0465630c6e6629740b7.json  query-4e7b26d26c66d40d23b5499c3fdb0352185374be367b88e7e25a0073c35ea512.json  query-4e81c37de33f75c7ff07bd1cb6f301d647e4ca4eb4450cf08d7b9fdb073c32b4.json  query-57320f40485fe9e8df2de2d85b57ead52b8ba1ee00c0f41188e5da8ccb0677d0.json  query-64636d73067ec9d4ce0ba350ef80efad3cd778fe2946947af297af49669ec97c.json  query-6488a474bce6cf445353739831894fafcc8d1424e8ff57ad269fbbdba9c8183d.json  query-770502ccbec8596934841d42173e43d6dc4d924eb2ef8105f8290acc73dc3678.json  query-7975584ebcc3d16280451a05f22688e121b299a1673512085b2b9420f889ee1c.json  query-7a58bbedd4dcf6114dd97fe9ef64a2b06040569512b4e8e127632f6e34b14df3.json  query-7dcb7a6fcc423653186697b1336c0524890a031e6df8776b7537205e82cb97ff.json  query-7f54f0fee4fcfc114c3a1851dd2b0ea45b5306e4f1ef5464fcb661fe6f91365c.json  query-801915eac67aa6b48d269065912d66924cb054625e2b5040c0d58394e7db5c8c.json  query-85dfa6cb7c95d1d3b4a3016a694ae7981f4aaa1ea5b92618a34a943f5711dee5.json  query-8600dca8e38cfe59cb88ba63ca68062450f6233e59c5fe89b3e6b93d57e75104.json  query-97a4b921fed23aeb192e725b95af842fa4aa70880a4b8b5d6075a976f571b039.json  query-9b1f8974dfeecb2192dd697d3da30f5bea8dbae4a18165aa216b85c629be5ad4.json  query-a37a58bed9c24c96320ad4c80dcde90ff21a85f66dc9f1ab9ca267f84614cdc9.json  query-a42505cf7bf2cf85a03f764cd2f14890b8ff3829885507e38ab50c81c55ca172.json  query-a849ea31bf3ca8124c37247fe5b33a1b56487b5a40cd5bafdfdca026e06c8ffe.json  query-a85d08f1d66fc48a6da528b5133cdc9c698aec0e96d41fe6e65ccc57a7b0ca89.json  query-c80b0e1537704a1fcbff7546728356be18e5fe148f85d7ae2c895a63720f7cb9.json  query-cbef42b3dfff61403c9a9edf0654b436abc1d4557cd484273fc5c9f37b6832ba.json  query-d9e4ae7e05536b72bd72cfbc6ade76b62c769384480f8f8784bbd12805137942.json  query-e343f99841b9b07d06cbf20ba5dbad7d5c2141ceb005ba94ff7ee699ecdb2447.json  query-f8c85d418ff53afb66ededc5a68410a2fbc89ed0a44a54514ef548b16cd06cb1.json
server/migrations/: 20250222084032_Create_base_tables.sql
server/queries/auth/: create_user.sql  get_user.sql  get_user_by_username.sql
server/queries/classes/: create_class.sql  get_class.sql  list_classes.sql
server/queries/export/: create_export.sql  get_export.sql  list_exports.sql
server/queries/export_files/: create_export_file.sql
server/queries/leagues/: create_league.sql  delete_league.sql  get_league.sql  list_leagues.sql  set_name.sql
server/queries/matches/: create_match.sql  delete_match.sql  get_match.sql  list_matches.sql  set_date.sql  set_name.sql
server/queries/shot_strings/: create_shot_string.sql  get_shot_string.sql  list_shot_strings_for_match.sql
server/queries/shots/: create_shot.sql  list_shots_for_string.sql
server/src/: app.rs  error.rs  main.rs
server/src/app/: auth.rs  classes.rs  export.rs  leagues.rs  matches.rs  shots.rs  strings.rs
server/src/app/auth/: routes.rs
src/: lib.rs  parser.rs  tests.rs
src/parser/: tests.rs
ui/: .gitignore  Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  index.html
ui/assets/: initializer.mjs
ui/src/: api.rs  app.rs  main.rs
ui/src/app/: admin.rs  auth.rs  classes.rs  leagues.rs  matches.rs  shooters.rs  shot_strings.rs  sm_exports.rs  sm_upload.rs
ui/src/app/classes/: class_create_panel.rs  class_details_panel.rs  class_list_panel.rs  classes_panel.rs
ui/src/app/leagues/: create_league_panel.rs  league_create_panel.rs  league_details_panel.rs  league_list.rs  league_match_list.rs  league_panel.rs  leagues_panel.rs
ui/src/app/matches/: match_details_panel.rs  match_list_panel.rs  match_panel.rs  matches_create_panel.rs  matches_list_panel.rs  matches_panel.rs
ui/src/app/shooters/: shooters_create_panel.rs  shooters_detail_panel.rs  shooters_list_panel.rs  shooters_panel.rs
ui/src/app/shot_strings/: shot_string_list_panel.rs  shot_string_panel.rs  shot_string_svg_panel.rs
ui/src/app/sm_exports/: sm_export_list_panel.rs  sm_export_panel.rs  sm_export_upload.rs  sm_exports_panel.rs
xtask/: Cargo.toml
xtask/src/: main.rs
