[workspace]
resolver = "2"
members  = ["lib/*", "server", "ui", "xtask"]

[workspace.package]
authors = ["Jacob Helwig <jacob@technosorcery.net>"]
license = "MIT OR Apache-2.0"
edition = "2021"
version = "0.1.0"
publish = false

[workspace.dependencies]
# nom-tracer isn't compatible with nom 8.0.0 yet, and only works with 7.x at most.
# nom-tracer = { version = "1.0.1", features = ["trace-color", "trace-context"] }
anyhow     = "1.0.95"
chrono     = { version = "0.4.39", features = ["serde"] }
log        = "0.4.26"
miette     = "7.5.0"
nom        = "8.0.0"
remain     = "0.2.14"
serde      = { version = "1.0.218" }
serde_json = { version = "1.0.139" }
sqlx       = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
thiserror  = "2.0.11"
ulid       = "1.1.4"
uuid       = { version = "1.14.0", features = ["serde"] }

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits      = "release"
opt-level     = 'z'
lto           = true
codegen-units = 1
panic         = "abort"

[profile.ui-release]
inherits      = "release"
panic         = 'abort'
codegen-units = 1
opt-level     = 's'
lto           = true
