[package]
name              = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8.1", features = ["tracing"] }
chrono = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "*", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
thiserror = { workspace = true }
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = [
  "compression-full",
  "cors",
  "decompression-full",
  "set-header",
  "timeout",
  "trace",
] }
uuid = { workspace = true }

shared-types = { path = "../lib/shared-types" }
