[package]
name              = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow            = { workspace = true }
axum              = { workspace = true }
axum_session_auth = { workspace = true }
axum_session_sqlx = { workspace = true }
chrono            = { workspace = true }
log               = { workspace = true }
serde_json        = { workspace = true }
sqlx              = { workspace = true }
thiserror         = { workspace = true }
tokio             = { workspace = true }
tower             = { workspace = true }
tower-http        = { workspace = true }
uuid              = { workspace = true }

shared-types          = { path = "../lib/shared-types" }
shotmarker-csv-parser = { path = "../lib/shotmarker-csv-parser" }
