[package]
name              = "ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow             = { workspace = true }
browser-panic-hook = "0.2.0"
gloo-utils         = "0.2.0"
log                = "0.4.25"
patternfly-yew     = { version = "0.6.3", features = ["tree", "icons-fab"] }
remain             = { workspace = true }
wasm-bindgen       = "0.2.100"
wasm-logger        = "0.2.0"
yew                = { version = "0.21", features = ["csr"] }
yew-nested-router  = "0.7.2"

[dependencies.web-sys]
version  = "0.3.77"
features = ["HtmlElement", "HtmlInputElement", "MediaQueryList"]

[profile.release]
panic         = 'abort'
codegen-units = 1
opt-level     = 's'
lto           = true
