[package]
name              = "ui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow             = { workspace = true }
async-trait        = { workspace = true }
browser-panic-hook = "0.2.0"
gloo-net           = { workspace = true }
gloo-utils         = "0.2.0"
log                = "0.4.26"
patternfly-yew     = { workspace = true }
remain             = { workspace = true }
serde              = { version = "1.0.218", features = ["derive"] }
serde_json         = "1.0.139"
uuid               = { workspace = true }
wasm-bindgen       = "0.2.100"
wasm-logger        = "0.2.0"
yew                = { workspace = true }
yew-nested-router  = "0.7.2"

shared-types = { path = "../lib/shared-types", features = ["patternfly-yew"] }

[dependencies.web-sys]
version = "0.3.77"
features = [
  "Headers",
  "HtmlElement",
  "HtmlInputElement",
  "MediaQueryList",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]
