[package]
name              = "ui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow               = { workspace = true }
async-trait          = { workspace = true }
chrono               = { workspace = true }
browser-panic-hook   = { workspace = true }
gloo-net             = { workspace = true }
gloo-utils           = { workspace = true }
log                  = { workspace = true }
markdown             = { workspace = true }
patternfly-yew       = { workspace = true }
remain               = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
uuid                 = { workspace = true }
wasm-bindgen         = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-logger          = { workspace = true }
web-sys              = { workspace = true }
yew                  = { workspace = true }
yew-hooks            = { workspace = true }
yew-more-hooks       = { workspace = true }
yew-nested-router    = { workspace = true }

shared-types = { path = "../lib/shared-types", features = ["patternfly-yew"] }
