[package]
name              = "shared-types"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
chrono = { workspace = true }
remain = { workspace = true }
serde  = { version = "1.0.218", features = ["derive"] }
uuid   = { version = "1.14.0", features = ["serde"] }

shotmarker-csv-parser = { path = "../shotmarker-csv-parser" }
