[package]
name              = "shared-types"
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
publish.workspace = true

[dependencies]
chrono         = { workspace = true }
patternfly-yew = { workspace = true, optional = true }
remain         = { workspace = true }
serde          = { workspace = true }
uuid           = { workspace = true }
yew            = { workspace = true, optional = true }

shotmarker-csv-parser = { path = "../shotmarker-csv-parser" }

[features]
patternfly-yew = ["dep:yew", "dep:patternfly-yew"]
